fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ html {
   transition: background-color 0.1s ease-in-out;
 }
 
+blockquote {
+  overflow: auto !important;
+}
+
 blockquote p {
   white-space: pre;
 }
